force-app/main/default/objects/Contact/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <inlineHelpText>This field can be selected within Address Builder</inlineHelpText>
    <label>OUTDATED Addressee</label>
    <type>TextArea</type>
</CustomField>