force-app/main/default/objects/Contact/fields/Admin_flag_field__c.field-meta.xml
<CustomField>
    <fullName>Admin_flag_field__c</fullName>
    <description>Stakeholder: Max</description>
    <inlineHelpText>For Admin use only, to flag items during projects</inlineHelpText>
    <label>Admin flag field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>