force-app/main/default/objects/Contact/fields/Aggregated_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Opt_in__c</fullName>
    <formula>IF( 
ISPICKVAL(DoubleOptIn__c, &quot;Confirmed&quot;) , True, 

(IF(
ISPICKVAL(DoubleOptIn__c, &quot;Implied&quot;) , True,

(IF(
ISPICKVAL(DoubleOptIn__c, &quot;Verbal Ok&quot;) , True, false))
)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregated Opt-in</label>
    <type>Checkbox</type>
</CustomField>