force-app/main/default/objects/Contact/fields/Ambassador_ID__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>CDS-2084 // CDS-1968</description>
    <label>Ambassador ID</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>