force-app/main/default/objects/Contact/fields/Ambassador_Level__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Level__c</fullName>
    <formula>IF ( ISPICKVAL(Manual_Ambassador_Level__c, &apos;&apos;), 
  IF(AND(PartnerID__c=&apos;&apos;,Ambassador_ID__c=&apos;&apos;, Submitted_Opportunity_Counter__c = 0),NULL,
    IF(OR(ISPICKVAL(Account.TypeOfCooperation__c,&apos;Lead Exchange&apos;),ISPICKVAL(Account.TypeOfCooperation__c,&apos;Distributor&apos;),ISPICKVAL(Account.TypeOfCooperation__c,&apos;METRO&apos;)),NULL,
      IF(Submitted_Won_Opportunity_Counter__c &gt;4,&apos;Premium Ambassador&apos;,
        IF(Submitted_Won_Opportunity_Counter__c&lt;2,&apos;Junior Ambassador&apos;,&apos;Pro Ambassador&apos;)
      )
    )
  ),
TEXT(Manual_Ambassador_Level__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ambassador Level</label>
    <type>Text</type>
</CustomField>