force-app/main/default/objects/Contact/fields/Ambassador_Level_DE__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Level_DE__c</fullName>
    <formula>IF( Ambassador_Level__c = &apos;Junior Ambassador&apos;, &apos;JUNIOR Tippgeber&apos;,
IF( Ambassador_Level__c = &apos;Premium Ambassador&apos;, &apos;PREMIUM Tippgeber&apos;,
IF( Ambassador_Level__c = &apos;Pro Ambassador&apos;, &apos;PROFI Tippgeber&apos;,&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ambassador Level DE</label>
    <type>Text</type>
</CustomField>