force-app/main/default/objects/Contact/fields/Amigo__c.field-meta.xml
<CustomField>
    <fullName>Amigo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amigo</label>
    <type>Checkbox</type>
</CustomField>