force-app/main/default/objects/Contact/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <inlineHelpText>This field can be selected within Address Builder</inlineHelpText>
    <label>OUTDATED Attention</label>
    <type>TextArea</type>
</CustomField>