force-app/main/default/objects/Contact/fields/Bad_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Bad_phone_number__c</fullName>
    <description>Can be deleted after https://jira.orderbird.com/browse/CDS-2622</description>
    <formula>OR(
AND(
NOT(ISBLANK( Phone )),
BEGINS(Phone , &apos;0&apos;)
),
AND(
NOT(ISBLANK( MobilePhone )),
BEGINS(MobilePhone , &apos;0&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad phone number</label>
    <type>Checkbox</type>
</CustomField>