force-app/main/default/objects/Contact/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NOT USED</inlineHelpText>
    <label>BillingAddress</label>
    <type>Checkbox</type>
</CustomField>