force-app/main/default/objects/Contact/fields/Caller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Caller_Contact__c</fullName>
    <formula>Account.Caller_Contact__c = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caller Contact</label>
    <type>Checkbox</type>
</CustomField>