force-app/main/default/objects/Contact/fields/Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles__c</fullName>
    <description>to be deleted</description>
    <formula>IF( Zuora_SoldTo_Contact__c = true, &quot;Shipping Contact | &quot; , &quot;&quot;) &amp; 
IF( Zuora_BillTo_Contact__c = true, &quot;Billing Contact | &quot; , &quot;&quot;) &amp; 
IF( DecisionMaker__c = true, &quot;Decision Maker | &quot; , &quot;&quot;) &amp; 
IF( FinanceContact__c = true, &quot;Finance Contact | &quot; , &quot;&quot;) &amp; 
IF( OperationalContact__c = true, &quot;Operational Contact | &quot; , &quot;&quot;) &amp; 
IF( TechnicalContact__c = true, &quot;Technical Contact | &quot; , &quot;&quot;) &amp; 
IF( inactiveEmployee__c = true, &quot;INACTIVE!&quot; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Roles</label>
    <type>Text</type>
</CustomField>