force-app/main/default/objects/Contact/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <label>CSAT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>