force-app/main/default/objects/Contact/fields/DecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>DecisionMaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this person authorized to make decisions for their account? Un/checked by Sales</inlineHelpText>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>