force-app/main/default/objects/Contact/fields/DedupeGmailEmail__c.field-meta.xml
<CustomField>
    <fullName>DedupeGmailEmail__c</fullName>
    <formula>IF( CONTAINS(Email, &quot;+&quot;) &amp;&amp; CONTAINS(Email, &quot;@gmail.com&quot;),
MID(Email,0,FIND(&quot;+&quot;,Email)-1)+&quot;@gmail.com&quot;,
Email
)</formula>
    <label>De-dupe Gmail Email</label>
    <type>Text</type>
</CustomField>