force-app/main/default/objects/Contact/fields/DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptIn__c</fullName>
    <label>Marketing Double Opt-In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Verbal Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>