force-app/main/default/objects/Contact/fields/EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>EmailOptOut__c</fullName>
    <formula>IF(HasOptedOutOfEmail,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailOptOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>