force-app/main/default/objects/Contact/fields/Field_Tester__c.field-meta.xml
<CustomField>
    <fullName>Field_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/CRMT-3243</description>
    <label>Field Tester</label>
    <referenceTo>Field_Tester__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>