force-app/main/default/objects/Contact/fields/FinanceContact__c.field-meta.xml
<CustomField>
    <fullName>FinanceContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this Contact the person in charge of financial questions for their Account? Un/Checked by Sales</inlineHelpText>
    <label>Finance Contact</label>
    <type>Checkbox</type>
</CustomField>