force-app/main/default/objects/Contact/fields/FormOfAddress__c.field-meta.xml
<CustomField>
    <fullName>FormOfAddress__c</fullName>
    <inlineHelpText>Indicates how the contact wants to be addressed: formal or informal</inlineHelpText>
    <label>Form of Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informal</fullName>
            </value>
            <value>
                <fullName>Formal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>