force-app/main/default/objects/Contact/fields/HasMyObEmail__c.field-meta.xml
<CustomField>
    <fullName>HasMyObEmail__c</fullName>
    <formula>Email =  Account.myOrderbirdEmail__c &amp;&amp; NOT(ISBLANK(Email))</formula>
    <label>HasMyObEmail</label>
    <type>Checkbox</type>
</CustomField>