force-app/main/default/objects/Contact/fields/inactiveEmployee__c.field-meta.xml
<CustomField>
    <fullName>inactiveEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this person no longer working for this Account? To be checked if the person is no longer with the company.</inlineHelpText>
    <label>inactive employee</label>
    <type>Checkbox</type>
</CustomField>