force-app/main/default/objects/Contact/fields/Invite_Fiscalization_Beta__c.field-meta.xml
<CustomField>
    <fullName>Invite_Fiscalization_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite: Fiscalization Beta</label>
    <type>Checkbox</type>
</CustomField>