force-app/main/default/objects/Contact/fields/Last_Accepeted_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Accepeted_Opportunity_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2027</description>
    <inlineHelpText>When was the last time this Ambassador has send us an opportunity?</inlineHelpText>
    <label>Last Accepeted Opportunity Date</label>
    <type>DateTime</type>
</CustomField>