force-app/main/default/objects/Contact/fields/Last_NPS_Response__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_Response__c</fullName>
    <label>Last NPS Response</label>
    <summarizedField>AutomatedSurvey__c.DateResponded__c</summarizedField>
    <summaryForeignKey>AutomatedSurvey__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>