force-app/main/default/objects/Contact/fields/Last_NPS_Send__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_Send__c</fullName>
    <label>Last NPS Send</label>
    <summarizedField>AutomatedSurvey__c.CreatedDate</summarizedField>
    <summaryForeignKey>AutomatedSurvey__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>