force-app/main/default/objects/Contact/fields/Manual_Ambassador_Level__c.field-meta.xml
<CustomField>
    <fullName>Manual_Ambassador_Level__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2027</description>
    <inlineHelpText>Selecting a value overwrites the otherwise automatically set Ambassador Level</inlineHelpText>
    <label>Manual Ambassador Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Junior Ambassador</fullName>
            </value>
            <value>
                <fullName>Pro Ambassador</fullName>
            </value>
            <value>
                <fullName>Premium Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>