force-app/main/default/objects/Contact/fields/Merge_Into__c.field-meta.xml
<CustomField>
    <fullName>Merge_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Into</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>