force-app/main/default/objects/Contact/fields/MergeName__c.field-meta.xml
<CustomField>
    <fullName>MergeName__c</fullName>
    <formula>IF(AND(
OR(
FirstName == &quot;MyOrderbird&quot;,
FirstName == &quot;[not provided]&quot;,
FirstName == &quot;Primary&quot;,
FirstName == &quot;n/a&quot;,
FirstName == &quot;-&quot;,
FirstName == &quot;.&quot;,
FirstName == &quot;&quot;,
ISBLANK(FirstName))
,
OR(
LastName == &quot;[not provided]&quot;,
LastName == &quot;Contact&quot;,
LastName == &quot;n/a&quot;,
LastName == &quot;Facebook Scrapper&quot;,
LastName == &quot;N/A&quot;,
LastName == &quot;*&quot;,
LastName == &quot;-&quot;,
LastName == &quot;.&quot;)),&quot;&quot;,TRIM(FirstName)&amp;&quot; &quot;&amp;TRIM(LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Name</label>
    <type>Text</type>
</CustomField>