force-app/main/default/objects/Contact/fields/Mindset__c.field-meta.xml
<CustomField>
    <fullName>Mindset__c</fullName>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>How does the contact feel about modern technology? Set by Sales</inlineHelpText>
    <label>Mindset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>modern / innovative</fullName>
            </value>
            <value>
                <fullName>standard / majority</fullName>
            </value>
            <value>
                <fullName>conservative / traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>