force-app/main/default/objects/Contact/fields/Most_Recent_Ambassador_F_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Ambassador_F_Name__c</fullName>
    <description>CDS-2084 // CDS-1968</description>
    <label>Most Recent Ambassador F.Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>