force-app/main/default/objects/Contact/fields/Most_Recent_Ambassador_Phone__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Ambassador_Phone__c</fullName>
    <description>CDS-2084 // CDS-1968</description>
    <label>Most Recent Ambassador Phone</label>
    <type>Phone</type>
</CustomField>