force-app/main/default/objects/Contact/fields/Most_Recent_CMId__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CMId__c</fullName>
    <label>Most Recent CMId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>