force-app/main/default/objects/Contact/fields/MyOb_Registration_Count__c.field-meta.xml
<CustomField>
    <fullName>MyOb_Registration_Count__c</fullName>
    <label>MyOb Registration Count</label>
    <summaryForeignKey>MyObVenue__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>