force-app/main/default/objects/Contact/fields/NameIssue__c.field-meta.xml
<CustomField>
    <fullName>NameIssue__c</fullName>
    <formula>OR(
FirstName == &quot;MyOrderbird&quot;,
FirstName == &quot;[not provided]&quot;,
FirstName == &quot;Primary&quot;,
FirstName == &quot;n/a&quot;,
FirstName == &quot;-&quot;,
FirstName == &quot;.&quot;,
FirstName == &quot;&quot;,
ISBLANK(FirstName),
LastName == &quot;[not provided]&quot;,
LastName == &quot;Contact&quot;,
LastName == &quot;n/a&quot;,
LastName == &quot;Facebook Scrapper&quot;,
LastName == &quot;N/A&quot;,
LastName == &quot;*&quot;,
LastName == &quot;-&quot;,
LastName == &quot;.&quot;)</formula>
    <label>Name Issue</label>
    <type>Checkbox</type>
</CustomField>