force-app/main/default/objects/Contact/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <description>Stakeholder: Partner management CDS-2351
Used for the creation of a new parent account</description>
    <label>New Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>