force-app/main/default/objects/Contact/fields/Nurturing__c.field-meta.xml
<CustomField>
    <fullName>Nurturing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nurturing</label>
    <type>Checkbox</type>
</CustomField>