force-app/main/default/objects/Contact/fields/OperationalContact__c.field-meta.xml
<CustomField>
    <fullName>OperationalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this contact representing the people who actually have to work with our products? Un/Checked by Sales</inlineHelpText>
    <label>Operational Contact</label>
    <type>Checkbox</type>
</CustomField>