force-app/main/default/objects/Contact/fields/Paired_Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Paired_Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: PaM https://jira.orderbird.com/browse/CDS-1880</description>
    <inlineHelpText>If and who is the assigned Sales Agent for this Ambassador?</inlineHelpText>
    <label>Paired Sales Agent</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales/AccM France</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Paired_Ambassadors</relationshipName>
    <type>Lookup</type>
</CustomField>