force-app/main/default/objects/Contact/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <description>Stakholder: PaM</description>
    <externalId>true</externalId>
    <inlineHelpText>What is this contacts ID as an orderbird Partner? Only to be used for partner contacts!</inlineHelpText>
    <label>Partner ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>