force-app/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Account.Primary_Contact__c = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>