force-app/main/default/objects/Contact/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this contact our primary go-to person for their account? The must only be one primary contact per account - if more then one contact have this checked, the account owner must correct this. Un/Checked by Sales</inlineHelpText>
    <label>Primary Contact Manual</label>
    <type>Checkbox</type>
</CustomField>