force-app/main/default/objects/Contact/fields/PrimaryLanguage__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLanguage__c</fullName>
    <description>Stakeholder: Sales &amp; CS &amp; MKT</description>
    <inlineHelpText>What language do we use to communicate with this venue? Filled in as soon as known. Updated if necessary!</inlineHelpText>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>