force-app/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <formula>IF ( Account.Primary_Contact__c =  Id ,IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J0000009Fmv&amp;operationContext=CHATTER&amp;contentId=05T5J000000SQYP&quot;, &quot;P&quot;,23,14), &quot;&quot;) +
IF ( Account.SF_BillTo_Contact__c  =  Id , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J0000009Fmr&amp;operationContext=CHATTER&amp;contentId=05T5J000000SQYK&quot;, &quot;B&quot;,23,14), &quot;&quot;) +
IF ( Account.SF_SoldTo_Contact__c  =  Id , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J0000009Fn0&amp;operationContext=CHATTER&amp;contentId=05T5J000000SQYZ&quot;, &quot;S&quot;,23,14), &quot;&quot;) +
IF ( Ambassador_ID__c != NULL, IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0685J0000009Fmq&amp;operationContext=CHATTER&amp;contentId=05T5J000000SQYF&quot;, &quot;A&quot;,23,14), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roles</label>
    <type>Text</type>
</CustomField>