force-app/main/default/objects/Contact/fields/SalesAgent__c.field-meta.xml
<CustomField>
    <fullName>SalesAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Salesagent is or was last responsible for this contact? Might differ from Account owner. Relevant for e.g. CRC. Only to be changed by authorized personal.</inlineHelpText>
    <label>Sales Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00e580000015470</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>