force-app/main/default/objects/Contact/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NOT USED</inlineHelpText>
    <label>ShippingAddress</label>
    <type>Checkbox</type>
</CustomField>