force-app/main/default/objects/Contact/fields/Submitted_Opportunity_Counter__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Opportunity_Counter__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2027</description>
    <inlineHelpText>How many Opportunities has this Ambassador submitted to us?</inlineHelpText>
    <label>Submitted Opportunity Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>