force-app/main/default/objects/Contact/fields/TechnicalContact__c.field-meta.xml
<CustomField>
    <fullName>TechnicalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: Sales &amp; Account Management</description>
    <inlineHelpText>Is this contact the person in charge of the technical setup for the account? Un/Checked by Sales</inlineHelpText>
    <label>Technical Contact</label>
    <type>Checkbox</type>
</CustomField>