force-app/main/default/objects/Contact/fields/TS_Marketing_opt_in_update__c.field-meta.xml
<CustomField>
    <fullName>TS_Marketing_opt_in_update__c</fullName>
    <label>TS_Marketing opt-in update</label>
    <type>DateTime</type>
</CustomField>