force-app/main/default/objects/Contact/fields/TypeOfCooperation__c.field-meta.xml
<CustomField>
    <fullName>TypeOfCooperation__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>What are the conditions of our partnership with this contact? Can differ from Type of Cooperation in Account! Managed by PaM</inlineHelpText>
    <label>Type of Cooperation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Partner on Commission</fullName>
            </value>
            <value>
                <fullName>Referral Partner w/out Commission</fullName>
            </value>
            <value>
                <fullName>Grouped Referral Partner on Commission</fullName>
            </value>
            <value>
                <fullName>Lead Exchange</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>METRO</fullName>
            </value>
            <value>
                <fullName>recurring Kickback Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>