force-app/main/default/objects/Contact/fields/VendorID__c.field-meta.xml
<CustomField>
    <fullName>VendorID__c</fullName>
    <description>Stakeholder: PaM</description>
    <inlineHelpText>What is the internal ID of the Vendor Entity in NS? Required for billing.</inlineHelpText>
    <label>Vendor ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>