force-app/main/default/objects/Contact/fields/Venue_Id__c.field-meta.xml
<CustomField>
    <fullName>Venue_Id__c</fullName>
    <label>Venue Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>