force-app/main/default/objects/Contact/fields/VenueContact__c.field-meta.xml
<CustomField>
    <fullName>VenueContact__c</fullName>
    <formula>Account.SF_Venue_Contact__c = Id</formula>
    <label>Venue Contact</label>
    <type>Checkbox</type>
</CustomField>