force-app/main/default/objects/Contact/fields/Zuora_BillTo_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zuora_BillTo_Contact__c</fullName>
    <description>Stakeholder: Account Management &amp; Finance</description>
    <formula>Id  =  Account.SF_BillTo_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this contact the billing contact for its Account? This means that the address in this contact needs to be complete and up to date. Checked automatically, when the contact got selected as billing contact on the Account</inlineHelpText>
    <label>Billing Contact (Zuora)</label>
    <type>Checkbox</type>
</CustomField>