force-app/main/default/objects/Contact/fields/Zuora_SoldTo_Contact__c.field-meta.xml
<CustomField>
    <fullName>Zuora_SoldTo_Contact__c</fullName>
    <description>Stakeholder: Account Management &amp; Finance</description>
    <formula>Id =  Account.SF_SoldTo_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this contact the shipping contact for its Account? This means that the address in this contact needs to be complete and up to date. Checked automatically, when the contact got selected as shipping contact on the Account</inlineHelpText>
    <label>Shipping Contact (Zuora)</label>
    <type>Checkbox</type>
</CustomField>