force-app/main/default/objects/Contact/fields/ZuoraSyncFailed__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSyncFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zuora Sync Failed</label>
    <type>Checkbox</type>
</CustomField>