force-app/main/default/objects/Contact/validationRules/Caller_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Caller_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(CONTAINS( $Label.Admin_Users , $User.Id )),
NOT(Id =  Account.Privacy_Contact__c),
Caller_Contact__c,

NOT(ISBLANK( Account.Caller_Contact__c )), 

OR(
ISBLANK( Email ),
ISBLANK( Phone ))

)</errorConditionFormula>
    <errorMessage>This is the Account Caller Contact. Please Fill the Email, the Phone and the address!</errorMessage>
</ValidationRule>