force-app/main/default/objects/Contact/validationRules/Cannot_Reparent_Contact_MyOb.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reparent_Contact_MyOb</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISBLANK( Account.ZuoraId__c )),

MyOb_Registration_Count__c &gt; 0,

ISCHANGED (AccountId),

NOT(PRIORVALUE(AccountId) = &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You cannot move this Contact to another Account. It has a MyOrderbird connection to this account.</errorMessage>
</ValidationRule>