force-app/main/default/objects/Contact/validationRules/OtherPhone_format_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherPhone_format_required</fullName>
    <active>true</active>
    <description>validate phone number fields values for phone number format
https://jira.orderbird.com/browse/CRM-770</description>
    <errorConditionFormula>AND(
NOT(CONTAINS($Label.Admin_Users , $User.Id )),
OR( 
 NOT(ISBLANK(OtherPhone)),
 ISCHANGED(OtherPhone)),
  NOT(
   OR(
    REGEX(OtherPhone ,&quot;[+]{1}[1-9]{2,2}[1-9]{1}[0-9]{3,9}&quot;),
    REGEX(OtherPhone ,&quot;[+]{1}[0-9]{2,3}[0-9]{1}[0-9]{3,15}&quot;),
    ISBLANK(OtherPhone),
    BEGINS(OtherPhone,&quot;n/a&quot;)
))
)</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>For phone numbers please consider the following format: 
+&quot;dial code&quot;+&quot;prefix code&quot;+&quot;phone number&quot; (without leading zero or any spaces), e.g.+4930123456789 
If the phone number is (still) unknown, enter &quot;n/a&quot;.</errorMessage>
</ValidationRule>